# traffic-counts

./: .gitignore  Cargo.toml  README.md  bacon.toml  db_cleaning.sql  db_migrations.sql
src/: aadv.rs  annual_avg.rs  check_data.rs  count_insert.rs  db.rs  denormalize.rs  extract_from_file.rs  intermediate.rs  lib.rs  main.rs  oracle_impls.rs  perm_bikeped.rs  verify.rs
src/db/: count_insert.rs  crud.rs  mod.rs  oracle_impls.rs
src/non_perm/: check_data.rs  extract_from_file.rs  intermediate.rs  mod.rs
static/: styles.css
templates/: admin_main.html  base.html  home.html  log_records_table.html  recordnum_form.html  viewer_main.html
templates/admin/: count_data.html  edit.html  import_log.html  insert.html  insert_from_existing.html  insert_many.html  insert_one.html  log_records_table.html  main.html  metadata_detail.html  metadata_list.html  recordnum_form.html  show_full_log.html  show_one_log.html  view.html  view_import_log.html
templates/counts/: aadv.html  count_data.html  metadata_detail.html  metadata_list.html
test_files/: bad_header.txt
test_files/15minutebicycle/: 167607.csv  vg-167607-ns-4175-na.csv
test_files/15minuteclassedvolume/: rc166905w.txt  speed_count.txt
test_files/15minutevehicle/: kw-102-www-21-35.csv  kw-103-sss-21-35.csv
test_files/bicycle/: 178955-s-1613-25.csv  178959-ew-2060-25.csv
test_files/ecocounter_15minutebicycle/: 179847.csv
test_files/ecocounter_15minutepedestrian/: 15min_pedestrian_count.csv  167297.csv
test_files/jamar_15minutevehicle/: 15min_bicycle_count.txt  15min_pedestrian_count.csv  168193.txt  (+1 more)
tests/: avg_annual.rs  determine_date.rs  field_metadata.rs  individual_bicycles.rs  metadata.rs  non_normal_speed.rs  non_normal_volcount.rs  speed_range_and_vehicle_class_counts.rs  speed_range_count.rs  vehicle_class.rs
(+5 files in other folders)
