[package]
name = "traffic-counts"
version = "0.2.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam = "0.8.2"
csv = "1.3.0"
dotenvy = "0.15.7"
log = "0.4.20"
oracle = { version = "0.6.2", features = ["chrono"] }
simplelog = "0.12.1"
thiserror = "1.0.56"

# specific to webui
axum = { version = "0.7.7", features = ["form"] }
axum-extra = "0.9.4"
rinja = "0.3.4"
rinja_axum = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
